# dex1_1_service

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  drawTN.py  main.cpp  setup_autostart.sh
include/: param.h
include/serialPort/: SerialPort.h
include/unitreeMotor/: unitreeMotor.h
include/unitreeMotor/include/: motor_msg_HG.h
lib/: libserialport-dev_0.1.1-3_arm64.deb  libserialport0_0.1.1-3_arm64.deb
test/: test_gripper.cpp  test_gripper2.cpp  test_gripper_sub.py
urdf/: dex1_1.urdf
